# lumina

./: .env.example  .gitignore  README.md  docker-compose.yaml  install.sh
backend/: Cargo.toml  Dockerfile
backend/lumina-protocol/: Cargo.toml
backend/lumina-protocol/src/: errors.rs  events.rs  lib.rs  room.rs
backend/lumina-server/: Cargo.toml
backend/lumina-server/src/: app_state.rs  config.rs  livekit.rs  main.rs
backend/lumina-server/src/auth/: mod.rs
backend/lumina-server/src/metrics/: mod.rs
backend/lumina-server/src/middleware/: rate_limit.rs
backend/lumina-server/src/routes/: health.rs  mod.rs  room.rs  turn.rs
backend/lumina-server/src/security/: headers.rs  mod.rs  rate_limiter.rs
backend/lumina-server/src/sfu/: mod.rs
backend/lumina-server/src/state/: mod.rs  pubsub.rs  redis_store.rs
backend/lumina-server/src/turn/: mod.rs
backend/lumina-server/src/ws/: events.rs  handler.rs  mod.rs  room_manager.rs
deploy/: .env.example  deploy.sh
deploy/certbot/: renew-hook.sh
deploy/coturn/: turnserver.conf
deploy/coturn/certs/: fullchain.pem  privkey.pem
deploy/nginx/: lumina-docker.conf  lumina.conf
deploy/systemd/: coturn.service  lumina-backend.service  lumina-sfu.service
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: llms.txt  robots.txt  sitemap.xml  yandex_98edabe6b2c3bd7c.html
frontend/public/.well-known/: security.txt
frontend/scripts/: generate-sitemap.ts  prerender.ts
frontend/src/: App.tsx  entry-server.tsx  main.tsx
frontend/src/hooks/: useLiveKit.ts  useMeetingReducer.ts  usePwaInstall.ts  useRecording.ts  useRoom.ts  useStreamCache.ts  useWebSocket.ts
frontend/src/lib/: api.ts  i18n.ts  markdown.tsx  stream-store.ts
frontend/src/pages/: AboutPage.tsx  FaqPage.tsx  InstallPage.tsx  LandingPage.tsx  MeetingPage.tsx  (+3 more)
(+21 files in other folders)
